F10 - Det første Spring Boot/MVC -eksemplet vårt